# exp-triangle-on-demand

./: CMakeLists.txt  README.md
cmake/generic/: eigen.cmake  sdl_3.cmake  sources.cmake
include/tod_core/: assets.h  data_gpu.h  data_tod.h  data_vert.h  gpu_device.h  inc_eigen.h  inc_sdl.h  inc_shadercross.h  io.h  poli_gpu.h  poli_tod.h  proc_gpu.h  proc_gpu_impl.h  proc_tod.h  refvalue.h
include/tod_live/: live.h
include/tod_py/: data_tod_py.h  inc_nanobind.h  inc_nanobind_stl.h
lab/: .gitignore  tod_py.py
lab/lab_helper/: __init__.py
script/tod_core/shaders/: triangle.frag  triangle.vert
setup/: requirements.py
src/repo_version/: CMakeLists.txt  git_version.cpp
src/tod_core/: CMakeLists.txt  assets.cpp  imp_shadercross.cpp  proc_gpu.cpp  proc_tod.cpp
src/tod_live/: CMakeLists.txt  live.cpp  main.cpp
src/tod_py/: CMakeLists.txt  data_tod_py.cpp  nanobind.cpp  nanobind_meta.cpp
